# PredictiveDisplay3.0

./: README.md  rosbag.bash
src/: .rosinstall  GimbalOperationNote  README.md
src/freq_sweep/: CMakeLists.txt  package.xml
src/freq_sweep/src/: freq_sweep.cpp
src/het_ster_calib/: CMakeLists.txt  package.xml
src/het_ster_calib/src/: het_ster_calib.cpp
src/joy2gimbal/: CMakeLists.txt  package.xml
src/joy2gimbal/launch/: joy2gimbal.launch  start.launch
src/joy2gimbal/src/: joy2gimbal.cpp  joy2gimbalWithPtrExample.cpp  joy2gimbalWorkingOLD.cpp
src/joystick_drivers/joy/launch/: ps4joy.launch
src/joystick_drivers/joy/src/: joy_node.cpp
src/predictor/: CMakeLists.txt  package.xml
src/predictor/launch/: delay_predictor.launch
src/predictor/launch/OLDLaunchFiles/: delay.launch  predictor.launch
src/predictor/src/: HistogramMatching.cpp  HistogramMatching.h  HomographyCalculation OLD.h  HomographyCalculation WorkingOLD.cpp  HomographyCalculation.cpp  HomographyCalculation.h  ImageStitching.cpp  ImageStitching.h  Stitcher_new.cpp  Stitcher_newTEST.cpp  delay.cpp  main.cpp  main2.cpp  parameters.h  stitcherOLD.cpp  testing.cpp
src/ros-sbgc-driver/: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
src/ros-sbgc-driver/include/: SBGC_ComObj_Imp.h  SBGC_lib  ros_sbgc_driver_node.h
src/ros-sbgc-driver/launch/: ros_sbgc_driver.launch
src/ros-sbgc-driver/src/: ros_sbgc_driver_node.cpp  ros_sbgc_driver_node2.cpp  ros_sbgc_driver_node_orig.cpp
src/ros-sbgc-driver/submodules/sbgc-api/SBGC_lib/include/: SBGC_parser.h
src/usb_cam/launch/: usb_cam.launch  usb_cam_double.launch
src/usb_cam/launch/Old files/: usb_cam (copy).launch  usb_cam-test.launch
src/usb_cam/src/: usb_cam.cpp
